# OptiScaler-Manager-Lite

./: CMakeLists.txt  OptiScalerMgrLite.vcxproj  OptiScalerMgrLite.vcxproj.filters  README.md  angents.md
src/: app.rc  cache.cpp  cache.h  compatibility.cpp  compatibility.h  cover_cache.cpp  cover_cache.h  game_types.h  gameconfig.cpp  gameconfig.h  igdb.cpp  igdb.h  launcher.cpp  launcher.h  localmeta.cpp  localmeta.h  main.cpp  optiscaler.cpp  optiscaler.h  renderer.h  renderer_dx11.cpp  renderer_dx11.h  renderer_dx12.cpp  renderer_dx12.h  renderer_factory.cpp  renderer_factory.h  renderer_gdi.cpp  renderer_gdi.h  resource.h  scanner.cpp  scanner.h  settings.cpp  settings.h  steam_cover.cpp  steam_cover.h  steam_store.cpp  steam_store.h  systeminfo.cpp  systeminfo.h
